# m4-earnings-rag

./: .gitignore  DEPLOY.md  README.md  STATE.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/transcripts/: AAPL_2026-01-30_000032019326000006.txt  AMZN_2026-04-30_000101872426000014.txt  BAC_2025-10-31_000007085825000405.txt  GOOGL_2026-04-30_000165204426000048.txt  JPM_2025-11-04_000162828025048859.txt  META_2026-04-30_000162828026028526.txt  MSFT_2026-04-29_000119312526191507.txt  NFLX_2026-04-17_000106528026000138.txt  NVDA_2025-11-19_000104581025000230.txt  TSLA_2026-04-23_000162828026026673.txt
docs/: cli-demo.txt  sample-qa.md
scripts/: build_index.py  run_demo.py
src/m4_earnings_rag/: __init__.py  config.py  index.py  rag.py  transcripts.py
tests/: test_smoke.py
