[project]
name = "m4-earnings-rag"
version = "0.1.0"
description = "Earnings Call / 10-Q RAG Q&A bot with local Ollama + ChromaDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "streamlit>=1.39.0",
    "plotly>=5.24.0",
    "click>=8.1.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
